--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "generator-web",
+  "name": "generator-ibm-web",
   "version": "1.0.0",
   "description": "Web Content Generator, supporting basic, webpack and react",
+  "license": "Apache-2.0",
   "main": "index.js",
   "files": [
     "generators"
@@ -34,5 +35,5 @@
     "yeoman-assert": "^2.2.2",
     "yeoman-test": "^1.7.0"
   },
-  "repository": "https://github.com/ibm-developer/generator-web"
+  "repository": "https://github.com/ibm-developer/generator-ibm-web"
 }
