--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "version": "standard-version"
   },
   "devDependencies": {
+    "coveralls": "^2.13.3",
     "eslint": "^3.1.1",
     "eslint-plugin-ejs": "^0.0.2",
     "fs-extra": "^2.1.2",
