--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -4,7 +4,7 @@
   "description": "A generated IBM Cloud application",
   "private": true,
   "engines": {
-    "node": "^6.9.0"
+    "node": "<%= nodeVersion %>"
   },
   "scripts": {
     "start": "node server/server.js",
