--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "npm run lint && npm run mocha",
     "lint": "eslint .",
-    "mocha": "nyc --reporter=lcov mocha --recursive -R xunit-file",
+    "mocha": "nyc --reporter=text --reporter=lcov mocha --recursive -R xunit-file",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "version": "standard-version"
   },
