--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "npm run lint && npm run mocha",
     "lint": "eslint .",
-    "mocha": "nyc --reporter=lcov mocha --recursive -R xunit-file",
+    "mocha": "nyc --reporter=lcov mocha --reporter mocha-multi-reporters --reporter-options configFile=config.json",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "version": "standard-version"
   },
@@ -30,9 +30,10 @@
     "fs-extra": "^2.1.2",
     "jshint": "^2.9.4",
     "mocha": "^3.2.0",
+    "mocha-multi-reporters": "^1.1.7",
     "nyc": "^10.3.0",
-    "xunit-file": "^1.0.0",
     "standard-version": "^4.2.0",
+    "xunit-file": "^1.0.0",
     "yeoman-assert": "^2.2.2",
     "yeoman-test": "^1.7.0"
   },
