fix(react-angular): use Procfile and npm-run to run client code alongside server debugger

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "debug": "node --debug server/server.js",
+    "debug": "node --inspect server/server.js",
     "test": "nyc mocha",
     "dev": "nodemon server/server.js"
   },
