--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "yeoman-assert": "^2.2.2",
     "yeoman-test": "^1.7.0"
   },
-  "repository": "https://github.com/ibm-developer/generator-ibm-web""
+  "repository": "https://github.com/ibm-developer/generator-ibm-web"
 }
