--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 script: npm test && npm run coveralls && ./npm_version_upgrade.sh
 branches:
   only:
-  - development
+  - develop
   - master
 notifications:
   slack:
