--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "<%= applicationName %>",
+  "name": "{{applicationName}}",
   "version": "1.0.0",
   "description": "A generated IBM Cloud application",
   "private": true,
   "engines": {
-    "node": "<%= nodeVersion %>"
+    "node": "{{nodeVersion}}"
   },
   "scripts": {
     "start": "node server/server.js",
