--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "npm run lint && npm run mocha",
     "lint": "eslint .",
     "mocha": "nyc --reporter=lcov mocha --reporter mocha-multi-reporters --reporter-options configFile=config.json",
+    "testinsights": "npm run mocha",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "version": "standard-version"
   },
